2012-02-03  Grégoire Sutre  <gregoire.sutre@gmail.com>

	NetBSD disk wedge support.

	* grub-core/kern/emu/hostdisk.c (grub_hostdisk_find_partition_start)
	[__NetBSD__]: Handle NetBSD disk wedges.
	* util/getroot.c (convert_system_partition_to_system_disk)
	[__NetBSD__]: Likewise.

2012-02-03  Mark Wooding <mdw@distorted.org.uk>

	* util/grub-mkconfig.in: Use umask rather than chmod to create
	grub.cfg.new to avoid insecure grub.cfg.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

        * grub-core/commands/ls.c: Gettextize.
        * grub-core/commands/setpci.c: Likewise.
        * grub-core/commands/videotest.c: Likewise.
        * grub-core/disk/geli.c: Likewise.
        * grub-core/kern/mm.c: Likewise.
        * grub-core/lib/relocator.c: Likewise.
        * grub-core/loader/efi/appleloader.c: Likewise.
        * grub-core/loader/i386/xnu.c: Likewise.
        * grub-core/loader/ia64/efi/linux.c: Likewise.
        * grub-core/loader/xnu.c: Likewise.
        * grub-core/net/dns.c: Likewise.
        * grub-core/net/net.c: Likewise.
        * grub-core/script/lexer.c: Likewise.
        * grub-core/script/parser.y: Likewise.
        * grub-core/script/yylex.l: Likewise.
        * util/getroot.c: Likewise.
        * util/grub-setup.c: Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_get_item): Use proper error
	number.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ldm.c (grub_util_ldm_embed): Correct error message.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_file.c (SEARCH_TARGET): Remove obsolete
	macro.
	* grub-core/commands/search_label.c (SEARCH_TARGET): Likewise.
	* grub-core/commands/search_uuid.c (SEARCH_TARGET): Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkstandalone.in: Fix help messages. Gettextize.
	* util/grub-install.in: Gettextize.
	* util/grub-mkconfig.in: Likewise.