@@ -128,7 +128,7 @@ grub_video_sis315pro_setup (unsigned int width, unsigned int height,
   if ((width != 640 && width != 0) || (height != 480 && height != 0)
       || (depth != 8 && depth != 0))
     return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
-		       "Only 640x400x8 is supported");
+		       "Only 640x480x8 is supported");
 
   grub_pci_iterate (find_card);
   if (!found)
